---------------------------------------------------------------------------
Version 3.19.9 (rgerhards), 2008-07-??
- added tutorial for creating a TLS-secured syslog infrastructure
- bugfix: machine certificate was required for client even in TLS anon mode
  Reference: http://bugzilla.adiscon.com/show_bug.cgi?id=85
  The fix also slightly improves performance by not storing certificates in
  client sessions when there is no need to do so.
---------------------------------------------------------------------------
Version 3.19.8 (rgerhards), 2008-07-01
- bugfix: gtls module did not correctly handle EGAIN (and similar) recv()
  states. This has been fixed by introducing a new abstraction layer inside
  gtls.
- added (internal) error codes to error messages; added redirector to
  web description of error codes
  closes bug http://bugzilla.adiscon.com/show_bug.cgi?id=20
- disabled compile warnings caused by third-party libraries
- reduced number of compile warnings in gcc's -pedantic mode
- some minor documentation improvements
- included all fixes from beta 3.17.5
---------------------------------------------------------------------------
Version 3.19.7 (rgerhards), 2008-06-11
- added new property replacer option "date-subseconds" that enables
  to query just the subsecond part of a high-precision timestamp
- somewhat improved plain tcp syslog reliability by doing a connection
  check before sending. Credits to Martin Schuette for providing the
  idea. Details are available at
  http://blog.gerhards.net/2008/06/reliable-plain-tcp-syslog-once-again.html
- made rsyslog tickless in the (usual and default) case that repeated
  message reduction is turned off. More info:
  http://blog.gerhards.net/2008/06/coding-to-save-environment.html
- some build system cleanup, thanks to Michael Biebl
- bugfix: compile under (Free)BSD failed due to some invalid library
  definitions - this is fixed now. Thanks to Michael Biebl for the patch.