@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------
 Version 3.19.9 (rgerhards), 2008-07-??
 - added tutorial for creating a TLS-secured syslog infrastructure
+- rewriten omusrmsg to no longer fork() a new process for sending messages
+  this caused some problems with the threading model, e.g. zombies. Also,
+  it was far less optimal than it is now.
 - bugfix: machine certificate was required for client even in TLS anon mode
   Reference: http://bugzilla.adiscon.com/show_bug.cgi?id=85
   The fix also slightly improves performance by not storing certificates in
